# FunASR-Live

./: .gitignore  LIVE_README.md  README.md  api_server.py  client_example.py  config.yaml  config_realtime.yaml  funasr_live.py  funasr_live.spec  funasr_realtime.py  pyproject.toml  realtime_api.py  realtime_gui.py  realtime_gui.spec  requirements_build.txt  requirements_live.txt  settings_gui.py  setup.py  start_live.sh
.github/workflows/: build-release.yml
